styles/cards.module.css
.title {
  -webkit-line-clamp: 3;
}

.blur {
  filter: blur(1.25rem);
}

.ad {
  & .title {
    -webkit-line-clamp: 4;
  }
}

.actionButtons {
  & > * {
    margin-left: 0.25rem;

    &:first-child {
      margin-left: 0;
    }
  }
}

.card {
  & > * {
    pointer-events: none;
  }

  &.trending {
    z-index: 1;

    @screen tablet {
      height: 100%;
    }
  }

  & a,
  & button,
  & label {
    pointer-events: all;
    z-index: 1;
  }

  & .link {
    z-index: unset;
  }
}

.flag {
  will-change: transform;
  transition: transform 0.1s linear;
}

.cardContainer:hover .flag, .flag:hover {
  transform: none;
}

.header {
  & > * {
    margin: 0 0.375rem;
  }
}

.post {
  &.hideContent > * {
    visibility: hidden;

    &.show {
      visibility: visible;
    }
  }

  &.read {
    border-color: var(--theme-divider-quaternary);
    background: var(--theme-background-primary);
    box-shadow: none;

    & .title {
      color: var(--theme-label-tertiary);
    }
  }

  @screen mouse {
    & .authorBox {
      visibility: hidden;
    }

    &:hover .authorBox {
      visibility: visible;
    }
  }
}

